# Auto

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zdd/auto/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zdd/auto/: MainActivity.java  PermissonActivity.java  TaskRunningService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zdd/auto/: ExampleUnitTest.java
autolibrary/: CMakeLists.txt  build.gradle  mark
autolibrary/src/androidTest/java/com/zdd/autolibrary/: ExampleInstrumentedTest.java
autolibrary/src/main/: AndroidManifest.xml
autolibrary/src/main/cpp/: FaceDector.cpp  FaceDector.h  TxtDector.cpp  TxtDector.h  bitmap_utils.cpp  bitmap_utils.h  my_log.h  native-lib.cpp
autolibrary/src/main/cpp/include/opencv2/calib3d/: calib3d_c.h
autolibrary/src/main/cpp/include/opencv2/core/: softfloat.hpp
autolibrary/src/main/java/com/zdd/autolibrary/: TaskService.java  TestActivity.java
autolibrary/src/main/java/com/zdd/autolibrary/model/: ImgRect.java
autolibrary/src/main/java/com/zdd/autolibrary/opencv/: OpencvHelper.java
autolibrary/src/main/java/com/zdd/autolibrary/sdk/: Auto.java
autolibrary/src/main/java/com/zdd/autolibrary/utils/: FileUtil.java  ImageUtil.java  NV21ToBitmap.java  RootUtil.java  ShellUtil.java
autolibrary/src/main/res/layout/: test_activity.xml
autolibrary/src/main/res/values/: strings.xml
autolibrary/src/test/java/com/zdd/autolibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
